# RustRenderer

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  README.md  build.sh  publish.sh  run.sh
benches/: renderer.rs
docs/: index.html
docs/pkg/: LICENSE  README.md  render.d.ts  render.js  render_bg.wasm  render_bg.wasm.d.ts
src/: camera.rs  lib.rs
src/accel/: bvh.rs  mod.rs
src/renderer/: gpu.rs  intersect.rs  math.rs  mod.rs  raster.rs  traverse.rs
src/scene/: environment.rs  geometry.rs  material.rs  mod.rs  texture.rs
src/shaders/: raster.wgsl  trace.wgsl
www/: index.html  tsconfig.json
www/pkg/: package.json  render.d.ts  render.js  render_bg.wasm
www/src/: index.ts  render-controller.test.ts  render-controller.ts  scenes.ts  turntable.ts
