[package]
name = "render"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
# cdylib  → the .wasm binary consumed by wasm-pack / the browser
# rlib    → a normal Rust library artifact so other Rust crates can depend on
#           this one (native viewer, CLI renderer, integration tests, etc.)
crate-type = ["cdylib", "rlib"]

[dependencies]
gltf     = "1"
glam     = "0.29"
bytemuck = { version = "1", features = ["derive"] }
log      = "0.4"   # logging facade; backend differs per target (see below)

# WebGPU — the whole reason this crate exists.
# `webgpu` feature enables the browser's native WebGPU backend on wasm32.
# On native targets wgpu uses Vulkan / Metal / DX12 regardless of this flag.
wgpu             = { version = "22", features = ["webgpu"] }
futures-channel  = "0.3"   # lightweight oneshot channel for async buffer mapping

# WASM-only dependencies — not compiled for native targets.
# wasm-bindgen / wasm-bindgen-futures are pure WASM glue; there is no reason
# to pull them in when building a native viewer or running `cargo test`.
# The corresponding attributes in lib.rs are gated with cfg_attr so they
# only appear in the AST when compiling for wasm32.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"   # async fn across the WASM boundary
js-sys               = "0.3"
console_log          = "1"     # routes log:: macros to console.log()
console_error_panic_hook = "0.1"  # turns Rust panics into readable JS errors
web-sys = { version = "0.3", features = [
    "Document",
    "HtmlCanvasElement",
    "Window",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "renderer"
harness = false

[profile.release]
opt-level = 3
